--- a/assets/css/mainwp-responsive-layouts.css
+++ b/assets/css/mainwp-responsive-layouts.css
@@ -110,6 +110,12 @@
 }
 
 @media screen and (max-width: 1140px) {
+
+	#mainwp-navigation-icon {
+		margin: 0 !important;
+		width: 35px !important;
+	}
+
 	.mainwp-content-wrap {
 		width: 100%;
 		margin-left: 0 !important;
@@ -123,7 +129,7 @@
 
 	.mainwp-main-mobile-navigation-container {
 		display: block;
-		padding: 10px;
+		padding: 1em;
 	}
 
 	.mainwp-ui.toplevel_page_mainwp_tab.mainwp-ui-leftmenu .mainwp-content-wrap,
