--- a/assets/css/themes/mainwp-minimalistic-theme.css
+++ b/assets/css/themes/mainwp-minimalistic-theme.css
@@ -120,10 +120,20 @@ body.mainwp-ui.mainwp-custom-theme,
 }
 
 .mainwp-ui.mainwp-custom-theme #mainwp-top-header {
-  background: var(--background-color);
-  color: var(--font-color);
+  background: #1c1d1b !important;
+  color: #ffffff !important;
   box-shadow: 0 1px 1px rgba(0, 0, 0, .04);
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .04);
+}
+
+.mainwp-ui.mainwp-custom-theme #mainwp-top-header .ui.icon.button:not(.red, .green) {
+  background: #1c1d1b !important;
+  -webkit-box-shadow: inset 2px 0px 0px 1px #ffffff !important;
+  -moz-box-shadow: inset 0px 0px 0px 1px #ffffff !important;
+  box-shadow: inset 0px 0px 0px 1px #ffffff !important;
+}
+.mainwp-ui.mainwp-custom-theme #mainwp-top-header .ui.icon.button .icon {
+  color: #ffffff !important;
 }
 
 .mainwp-ui.mainwp-custom-theme #mainwp-page-navigation-wrapper {
@@ -228,10 +238,13 @@ body.mainwp-ui.mainwp-custom-theme,
   background-color: var(--background-color);
   border-color: var(--border-color);
 }
-
-.mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item {
-  background-color: var(--background-color);
-  color: var(--font-color);
+.mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item:hover,
+.mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item.active {
+  background: var(--accent-color);
+}
+.mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item:hover .page-link,
+.mainwp-ui.mainwp-custom-theme .ui.pagination.menu .item.active .page-link {
+  color: #ffffff !important;
 }
 
 .mainwp-ui.mainwp-custom-theme .ui.selection.table tr.hoverli,
