feat: import ManageWP file

--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -1,6 +1,3 @@
-/* END V4
-********************************************************************************/
-
 /* Genaral Style */
 
 .mainwp-main-content {
@@ -465,6 +462,11 @@
 .mainwp-widget .dt-search.ui.input {
     padding: 5px;
     max-width: 160px;
+}
+
+/* Forms - Import Sites */
+.mainwp-managesites-import-rows:nth-of-type(odd) {
+    background-color: rgba(0,0,0,.04);
 }
 
 
