--- a/assets/css/themes/mainwp-default-theme.css
+++ b/assets/css/themes/mainwp-default-theme.css
@@ -421,6 +421,10 @@
   -webkit-border-radius: 10px;
 }
 
+.mainwp-ui.mainwp-custom-theme .mainwp-managesites-import-rows:nth-of-type(odd) {
+  background-color: var(--grey-light) !important;
+}
+
 /* Lists */
 .mainwp-ui.mainwp-custom-theme .ui.divided.list .item {
   border-color: var(--grey-light) !important;
