--- a/assets/css/themes/mainwp-default-theme.css
+++ b/assets/css/themes/mainwp-default-theme.css
@@ -391,6 +391,19 @@
   -webkit-border-radius: 10px;
 }
 
+.mainwp-ui.mainwp-custom-theme #mainwp-edit-site-edit-url-www {
+  border-radius: 0 !important;
+  -webkit-border-radius: 0 !important;
+  border-left: none !important;
+  border-right: none !important;
+}
+
+.mainwp-ui.mainwp-custom-theme #download-mainwp-migration-pass {
+  border-radius: 10px 0 0 10px !important;
+  -webkit-border-radius: 10px 0 0 10px !important;
+  border-right: none !important;
+}
+
 .mainwp-ui.mainwp-custom-theme .ui.left.action.input .ui.dropdown {
   border-radius: 10px 0 0 10px !important;
   -webkit-border-radius: 10px 0 0 10px !important;
@@ -631,7 +644,7 @@
 .mainwp-ui.mainwp-custom-theme #mainwp-page-navigation-wrapper {
   background-color: #fff;
   padding: 0 !important;
-  border-right: 2px solid #E7EEF6;
+  border-right: 1px solid #E7EEF6;
   box-shadow: 2px 0 0 0 rgba(0, 0, 0, 0.1) !important;
 }
 
@@ -857,7 +870,7 @@ body.mainwp-ui.mainwp-custom-theme,
 /* Works on Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: var(--grey-dark-alt) var(--grey-light-alt);
+  scrollbar-color: var(--grey-dark-alt) rgba(255,255,255,0);
 }
 
 /* Works on Chrome, Edge, and Safari */
@@ -871,7 +884,12 @@ body.mainwp-ui.mainwp-custom-theme,
 
 *::-webkit-scrollbar-thumb {
   background-color: var(--grey-dark-alt);
-  border-radius: 20px !important;
+  border-radius: 5px !important;
+  -webkit-border-radius: 5px !important;
   border: 4px solid transparent;
   background-clip: padding-box;
+}
+
+*::-webkit-scrollbar-button {
+  display: none !important;
 }
